--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,11 @@ services:
       - .env
     volumes:
       - db_data:/var/lib/postgresql/data
-
+  swagger:
+    image: swaggerapi/swagger-ui
+    ports:
+      - 8000:8080
+    environment:
+      - SWAGGER_JSON_URL=http://localhost:3000/swaggers
 volumes:
   db_data:
