--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,11 @@ Style/Documentation:
   Enabled: false
 Metrics/MethodLength:
   Max: 50
+Metrics/BlockLength:
+  Exclude:
+    - '**/*_spec.rb'
 AllCops:
+  SuggestExtensions: false
   Exclude:
     - 'lib/swagger/**/*'
     - 'db/schema.rb'
