Add spec for invoices controller

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,9 @@ Metrics/MethodLength:
 Metrics/BlockLength:
   Exclude:
     - '**/*_spec.rb'
+Layout/LineLength:
+  Exclude:
+    - '**/*_spec.rb'
 AllCops:
   SuggestExtensions: false
   Exclude:
